@@ -1097,7 +1097,8 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 
 <pre><ul>
 nuttx-0.3.15 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
-	* Add support for ROMFS filesystem (initial checkin untested)
+	* Added support for ROMFS filesystem.
+	* Added a simple test the ROMFS filesystem (examples/romfs)
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
